@@ -18,7 +18,7 @@ universal setup on most distributions.
 Login as root and type the following commands to do the basic install:
 
 cd /tmp
-tar xfvz /pathtopackage/@PACKAGE@-@VERSION@.tar.gz
+tar xfvj /@prefix@/@PACKAGE@-@VERSION@.tar.bz2
 cd @PACKAGE@-@VERSION@ 
 bash ./SETUP.sh
 
@@ -27,7 +27,7 @@ necessary users. If this in successfull, logout and login as user "mbse".
 To build and install mbse bbs type the following commands:
 
 cd
-tar xfvz /pathtopackage/@PACKAGE@-@VERSION@.tar.gz
+tar xfvj /pathtopackage/@PACKAGE@-@VERSION@.tar.bz2
 cd @PACKAGE@-@VERSION@
 ./configure
 make
@@ -50,7 +50,7 @@ Login as user "mbse", backup your bbs configuration, and then type the
 following commands:
 
 cd
-tar xfvz /pathtopackage/@PACKAGE@-@VERSION@.tar.gz
+tar xfvj /pathtopackage/@PACKAGE@-@VERSION@.tar.bz2
 cd @PACKAGE@-@VERSION@
 ./configure
 make
