@@ -10,6 +10,7 @@ v0.39.4		08-Dec-2003
 		Cleanup in main makefile, added help.
 		Revised configure and all Makefiles for better support of
 		linking with threads libraries.
+		Changed endian tests using the configure script.
 
 	upgrade:
 		If you didn't change anything of the language defaults then
